Fixed animals on mobile

--- a/src/shared/Animal/Animal.scss
+++ b/src/shared/Animal/Animal.scss
@@ -32,5 +32,6 @@
     left: -6px;
     top: -7px;
     z-index: 0;
+    border: 1px solid;
   }
 }
